// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-kubernetes - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Plan and create production-ready Azure Kubernetes Service (AKS) clusters. Covers Day-0 decisions and Day-1 configuration, cluster SKUs (Automatic vs Standard), security, monitoring, reliability/performance best practices, upgrades, and networking. WHEN: create AKS cluster, plan AKS configuration, design AKS networking, AKS Automatic vs Standard, AKS security, AKS upgrade strategy, AKS autoscaling, AKS monitoring setup, AKS cost analysis, Day-0 checklist.",
  "extractedKeywords": [
    "aks",
    "analysis",
    "automatic",
    "autoscaling",
    "azure",
    "best",
    "checklist",
    "cli",
    "cluster",
    "clusters",
    "configuration",
    "container",
    "cost",
    "covers",
    "create",
    "day-0",
    "day-1",
    "decisions",
    "deploy",
    "design",
    "diagnostic",
    "entra",
    "identity",
    "key vault",
    "kubernetes",
    "mcp",
    "monitor",
    "monitoring",
    "networking",
    "observability",
    "performance",
    "plan",
    "practices",
    "production-ready",
    "reliability",
    "security",
    "service",
    "setup",
    "skus",
    "standard",
    "strategy",
    "upgrade",
    "upgrades",
    "when",
  ],
  "name": "azure-kubernetes",
}
`;

exports[`azure-kubernetes - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "aks",
  "analysis",
  "automatic",
  "autoscaling",
  "azure",
  "best",
  "checklist",
  "cli",
  "cluster",
  "clusters",
  "configuration",
  "container",
  "cost",
  "covers",
  "create",
  "day-0",
  "day-1",
  "decisions",
  "deploy",
  "design",
  "diagnostic",
  "entra",
  "identity",
  "key vault",
  "kubernetes",
  "mcp",
  "monitor",
  "monitoring",
  "networking",
  "observability",
  "performance",
  "plan",
  "practices",
  "production-ready",
  "reliability",
  "security",
  "service",
  "setup",
  "skus",
  "standard",
  "strategy",
  "upgrade",
  "upgrades",
  "when",
]
`;
